# rollforward

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
bindings/csharp/Rollforward.Tests/: ConflictTests.cs  EngineTests.cs  InMemoryBackends.cs  InMemoryStore.cs  RecordingListener.cs  Rollforward.Tests.csproj
src/: adapter.rs  binary.rs  core.rs  engine.rs  lib.rs  oplog.rs  remote.rs  runtime.rs  store.rs  text.rs  types.rs  v2_remote.rs  v2_store.rs  v2_types.rs
tests/: sync.rs
