[package]
name = "rollforward"
version = "0.2.0"
edition = "2024"
description = "Decentralized file-sync engine for dumb remote storage (text CRDT + binary chunking, rollback, truncation)."
readme = "README.md"
license = "MIT"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
blake3 = "1.8.5"
fastcdc = "4.0.1"
redb = "4.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
uniffi = { version = "0.29.4" }
yrs = "0.25"
zstd = "0.13.3"

[dev-dependencies]
tempfile = "3.27.0"
